changed Main.css hero-unit: background-size from 100% to cover to fix search bar from falling below the image on mobile

--- a/client/app/main/main.css
+++ b/client/app/main/main.css
@@ -15,7 +15,7 @@
 
 .hero-unit {
     background: url("/assets/images/Rome.jpg") center center no-repeat;
-    background-size:100%;
+    background-size: cover;
     position: relative;
     padding: 14% 0%;
     color: #F5F5F5;
